[project]
name = "sentry_group_test_tools"
version = "2024.04.10"
license = {file = "LICENSE"}
authors = [{name = "Bartek Ogryczak", email = "bartek.ogryczak@sentry.io"}]

dependencies = ["click >= 8"]

[project.entry-points.console_scripts]
test-grouping = "sentry_group_test_tools.cli:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sentry_group_test_tools"]
