[project]
name = "sentry_group_test_tools"
version = "2024.04.12"
description = "Tools for tests error grouping in Sentry"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Bartek Ogryczak", email = "bartek.ogryczak@sentry.io"}]

dependencies = ["click >= 8"]

[project.scripts]
test-grouping = "sentry_group_test_tools.cli:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["sentry_group_test_tools*"]
namespaces = false
